--- a/src/Spryker/ProductAttributeGui/composer.json
+++ b/src/Spryker/ProductAttributeGui/composer.json
@@ -11,10 +11,10 @@
     "spryker/product": "^5.2.0 || ^6.0.0",
     "spryker/product-attribute": "^1.0.0",
     "spryker/symfony": "^3.0.0",
-    "spryker/util-text": "^1.2.0",
-    "spryker/application": "^3.8.0"
+    "spryker/util-text": "^1.2.0"
   },
   "require-dev": {
+    "spryker/application": "^3.8.0",
     "spryker/propel": "*",
     "spryker/testify": "*",
     "spryker/zed-navigation": "*"
